여름 특강 예제 및 연습

--- a/src/main/resources/templates/redirect.html
+++ b/src/main/resources/templates/redirect.html
@@ -5,11 +5,14 @@
   <title>redirect</title>
 </head>
 <body>
-<script type="text/javascript">
-  let msg = /*[[${msg}]]*/ '';
-  let url = /*[[${url}]]*/ '/main';
+<script th:inline="javascript"> // javascript 내부에서 Thymeleaf 문법을 인식할 수 있도록 함
+  window.onload = function() {
+    // 자바로부터 넘어온 값을 Thymeleaf문법으로 꺼내어 자바스크립트 변수에 할당함
+  let msg = [[${msg}]];
+  let url = [[${url}]];
   alert(msg);
   location.href=url;
+  }
 </script>
 <meta charset="UTF-8">
 </body>
