--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -58,6 +58,7 @@
                 </div>
                 <div class="divTableCell">
                     <input type="text" name="user_id" id="user_id" style="width:95%"/>
+                    <!-- 사용자에게 보여질 html화면에다 ID와 PW를 입력받기 위해 input 태그 작성 -->
                 </div>
             </div>
             <div class="divTableRow">
