여름 특강 예제 및 연습

--- a/src/main/resources/templates/a.html
+++ b/src/main/resources/templates/a.html
@@ -5,6 +5,15 @@
     <title>a</title>
 </head>
 <body>
-<h1 id="a">공모전</h1>
+<h2>공지사항 등록하기</h2>
+<hr/>
+<br/>
+<div>
+    <form action="/a" method="post">
+        <input type="text" id="content" placeholder="내용">
+        <!--    <button id="btnAnalyze" type="submit">분석</button>-->
+        <input type="submit" value="분석">
+    </form>
+</div>
 </body>
 </html>
